# othello

./: .git-blame-ignore-revs  .gitmodules  CMakeLists.txt  README.md
src/: AI.hpp  CMakeLists.txt  Exception.hpp  HeuristicFunction.hpp  MainMenu.cpp  MainMenu.hpp  MinMaxStrategy.cpp  MinMaxStrategy.hpp  Othello.cpp  Othello.hpp  OthelloWindow.cpp  OthelloWindow.hpp  RandomAi.cpp  RandomAi.hpp  StrategicAi.cpp  StrategicAi.hpp  Strategy.hpp  coinParityHeuristic.cpp  coinParityHeuristic.hpp  compositeHeuristic.cpp  compositeHeuristic.hpp  cornerHeuristic.cpp  cornerHeuristic.hpp  main.cpp  mainMenu.cpp  mainMenu.hpp  mobilityHeuristic.cpp  mobilityHeuristic.hpp  stabilityHeuristic.cpp  stabilityHeuristic.hpp  version.hpp
src/gui/: ImGuiWrapper.cpp  ImGuiWrapper.hpp  imgui_config.hpp
src/util/: StringBuilder.hpp  configure_logging.cpp  configure_logging.hpp  define_logger.hpp
